Uses expressions liken "doc.pet" and "doc.car".

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,10 @@
 <div *ngFor="let doc of joined | async">
 
     <h3>{{ doc.name }}</h3>
+    <h3>{{ doc.car }}</h3>
+    <h3>{{ doc.key }}</h3>
+    <h3>{{ doc.pet }}</h3>
+    -------------------------
 
     <div *ngFor="let item of doc | keyvalue">
         {{ item.key }}: {{ item.value | json }}
@@ -25,6 +29,7 @@
 <div *ngFor="let doc of joined2 | async">
 
     <h3>{{ doc.name }}</h3>
+    -------------------------
 
     <div *ngFor="let item of doc | keyvalue">
         {{ item.key }}: {{ item.value | json }}
